# akantu-playground

./: .gitignore  BM_0.cc  CMakeLists.txt  bloc.geo  ntn_test_100.geo  ntn_test_1000.geo  ntn_test_200.geo  ntn_test_500.geo  ras_ss.in  ras_ss_coulomb.in  ras_ss_coulomb_0.10.in  ras_ss_coulomb_0.15.in  ras_ss_coulomb_0.20.in  ras_ss_coulomb_0.25.in  ras_ss_coulomb_0.30.in  ras_ss_coulomb_0.33.in  ras_ss_coulomb_ve.in  ras_ss_sw.in  ras_ss_swnh.in  run_coulomb.sh  run_coulomb_batch.sh  steady_state.cc  steady_state_Method1.cc  steady_state_SW_Sslow.cc  steady_state_SW_local.cc  steady_state_SW_local_gentlenudge.cc  steady_state_SW_noheal.cc  steady_state_SW_slow.cc  steady_state_local.cc  steady_state_local_gentlenudge.cc  steady_state_slipweakening.cc  test.cc
node_to_node/: CMakeLists.txt
